tests/ui/enum/enum-variant-no-field.stderr
error[E0609]: no field `a` on type `Foo`
  --> $DIR/enum-variant-no-field.rs:7:14
   |
LL |     Foo::Bar.a;
   |              ^ unknown field

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
